footer updates and iframes fixes added  (to ctrl relative spacing  ie., box in codepen & do the transitions for hover)

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -1,70 +1,201 @@
-
-
-
 /* ------------------------------
 VARIABLES
  */
-    :root {
+:root {
+  /* theme colors */
+  --color-almost-white: #e8eef4;
 
+  --color-light-green: #63dbc1;
+  --color-purple: #4952a3;
+  --color-red: #ff5b5e;
 
-        --color-almost-white: #e8eef4;
-        --color-light-green: #63dbc1;
-        --color-purple:#4952a3;
-        --color-red:#ff5b5e;
-        --color-deep-blue:#28313b;
-        --color-light-grey:#97a4b1;
-        --color-mid-blue:#34495e;
+  --color-deep-blue: #28313b;
+  --color-light-grey: #97a4b1;
 
-    /* extrapolated colours */
+  --color-mid-blue: #34495e;
 
-        --main-text-color:= var(--color-mid-blue);
-        --strong-text-color: var(--color-deep-blue);
-        --alternative-text-color: var(--color-almost-white);
-        --error_code: var(--color-red);
-        --border-color: var(--colour-light-grey);
-    /* background colours*/
-        --main-bg-color: var(--color-almost-white);
-        --secondary-bg-color: var(--color-almost-white);
-        --alternative-bg-color: var(--color-purple);
+  /* extrapolated colours */
+  --main-text-color: var(--color-mid-blue);
+  --strong-text-color: var(--color-deep-blue);
+  --alternative-text-color: var(--color-almost-white);
+  --error-color: var(--color-red);
+  --border-color: var(--color-light-grey);
 
-        /*-- font sizes -- */
- /* ------------------------------
+  --main-bg-color: var(--color-almost-white);
+  --secondary-bg-color: var(--color-almost-white);
+  --alternative-bg-color: var(--color-purple);
+
+  /* font styles */
+
+  --font-heading: "Rubik", sans-serif;
+  --font-default: "Karla", sans-serif;
+
+  /* spacing*/
+  --padder: 3%;
+  --spacer: 20px;
+  --spacer-large: 80px;
+  --transition-time: 0.3s;
+
+  /* font sizes */
+  --font-size-site-title: 32px;
+  --font-size-page-title: 40px;
+  --font-size-section-title: 30px;
+  --font-size-sub-title: 24px;
+  --font-size-heading-small: 16px;
+  --font-size-detail-copy: 14px;
+
+  --area-wide: 1200px;
+}
+/* ------------------------------
 GLOBAL DEFAULTS
  */
-
-
- /* ------------------------------
+* {
+  box-sizing: border-box;
+}
+body {
+  font-family: var(--font-default);
+  line-height: 1.4;
+  color: var(--main-text-color);
+  font-size: 18px;
+}
+img,
+video,
+iframe {
+  max-width: 100%;
+  height: auto;
+}
+/* ------------------------------
 HEADINGS AND TYPE
  */
 
-
-
- /* ------------------------------
+/* ------------------------------
 LAYOUT
  */
+.layout-full-width,
+.layout-wide {
+  margin-bottom: var(--spacer-large);
+  padding: 0 var(--padder);
 
-
- /* ------------------------------
-HEADER
- */
- header {
-    background-color: #4952a3;
+  /* centrering the divs */
+  margin-left: auto;
+  margin-right: auto;
 }
 
+.layout-full-width {
+  width: 100%;
+  padding-left: 0;
+  padding-right: 0;
+}
+.layout-wide {
+  max-width: var(--area-wide);
+}
 
+/* ------------------------------
+HEADER
+ */
+header {
+  background-color: var(--alternative-bg-color);
+  padding-top: var(--padder);
+}
 
- /* ------------------------------
+header .layout-wide {
+  margin-bottom: 0;
+  overflow: hidden;
+}
+
+.logo-wrapper {
+  width: 20%;
+  float: left;
+}
+
+.logo {
+  max-width: 50px;
+}
+
+.site-title {
+  font-family: var(--font-heading);
+  font-size: var(--font-size-site-title);
+  color: var(--alternative-text-color);
+  font-weight: bold;
+  width: 80%;
+  text-align: right;
+  float: right;
+}
+/* ------------------------------
 NAVIGATION
  */
- 
- /* ------------------------------
+
+/* ------------------------------
 FOOTER
  */
- 
- /* ------------------------------
+footer {
+  background-color: var(--alternative-bg-color);
+}
+
+.footer-subscribe {
+    background-color: var(--secondary-bg-color);
+    padding: var(--spacer-large) 0;
+    text-align: center;
+}
+.footer-notices {
+padding: var(--spacer) 0;
+}
+
+.footer-notices .layout-wide {
+    text-align: center;
+    margin-bottom: 0;
+}
+/* social icons go here */
+.social-links {
+    list-style:none;
+    padding: 0;
+    margin: 0;
+
+}
+
+.social-links li {
+    display: inline-block;
+    margin-left: 5px;
+    margin-right: 5px;
+
+}
+
+.social-links a {
+    display: block;
+    max-width: 30px;
+    transform: scale(0.8)
+    transition: var(--transition-time);
+}
+
+.social-links a:hover {
+    transform: scale(1);
+}
+.copyright {
+    color: var(--alternative-text-color);
+}
+/*  social icons */
+
+.
+
+/* ------------------------------
 FORMS
  */
- 
- /* ------------------------------
+
+/* ------------------------------
 MODULES
  */
+
+.iframe-container {
+    position: relative;
+    height: 0;
+    overflow: hidden;
+    padding-bottom: 56.25%;
+    padding-top: 35px;
+}
+.iframe-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%height: 100%
+}
+
